--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,12 @@
   }
 
 
-  /* In your global CSS file */
 .hide-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
   }
   
   .hide-scrollbar::-webkit-scrollbar {
-    display: none;  /* Chrome, Safari and Opera */
+    display: none;  
   }
   
